# fluster_trading

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  soteria.sh  tsconfig.json
.coderrect/logs/: log.current
.github/workflows/: audit.yml
cli/: README.md  config.json  package.json  tsconfig.json
cli/src/: const.ts  index.ts
clients/: swap.js
forked-programs/: SOL_USD.json
programs/fluster_trading/: Cargo.toml
programs/fluster_trading/src/: error.rs  lib.rs
programs/fluster_trading/src/curve/: calculator.rs  constant_product.rs  fees.rs  mod.rs
programs/fluster_trading/src/instructions/: betting.rs  cancel.rs  close_account.rs  close_betting.rs  complete.rs  deposit.rs  initialize.rs  mod.rs  reveal.rs  update_pool_config.rs  withdraw.rs
programs/fluster_trading/src/instructions/admin/: collect_fee.rs  create_config.rs  initialize.rs  mod.rs  update_config.rs  update_pool_config.rs
programs/fluster_trading/src/states/: betting.rs  config.rs  events.rs  mod.rs  pool.rs
programs/fluster_trading/src/utils/: token.rs
scripts/: createMint.ts  initialize.ts  mint-metadata.json  utils.ts
tests/: 00_environment.test.js  00_environment.test.ts  fluster_trading.test.js  fluster_trading.test.ts  pyth_oracle_get_price.js  pyth_oracle_get_price.ts
tests/assets/: operator.json  user.json  wallet.js  wallet.ts
tests/nodes/: index.ts
tests/sdk/: cloclwork.js  instructions.js  instructions.ts  oracle.ts  tx.ts  type.d.ts  utils.js  utils.ts  web3.ts
utils/: boilerplateReduction.js  boilerplateReduction.ts
(+8 files in other folders)
